--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
   <script>
     // Initialize Firebase
     var config = {
-      apiKey: "AIzaSyBQuY8dr9B2qQmktHC0YTD9L4QlT5gX8is",
-      authDomain: "pwa240-214.firebaseapp.com",
-      databaseURL: "https://pwa240-214-default-rtdb.firebaseio.com",
-      projectId: "pwa240-214",
-      storageBucket: "pwa240-214.appspot.com",
-      messagingSenderId: "905276096160",
-      appId: "1:905276096160:web:0fb139f85b27f0519093c5",
-      measurementId: "G-5PYQ944LRM"
+      apiKey: "AIzaSyAcTj2Z9G1g1_vCqXcjH3V_iFWOqyL-u4s",
+      authDomain: "assign-pwa.firebaseapp.com",
+      databaseURL: "https://assign-pwa-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "assign-pwa",
+      storageBucket: "assign-pwa.appspot.com",
+      messagingSenderId: "192755878920",
+      appId: "1:192755878920:web:7c480fdd94e95ed30b95bd",
+      measurementId: "G-V4LQHB19Y3"
     };
     firebase.initializeApp(config);
   </script>
