--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,11 @@
 </head>
 
 <body>
-  <h1 class="vertical-container">Hello World</h1>
+  <h1 class="vertical-container">
+    <div id="tiles-board" class="center-box">
+      <div id="count">0</div>
+    </div>
+  </h1>
   <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -28,7 +32,7 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script> 
+  <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js')
         .then(function () {
@@ -51,6 +55,10 @@
         console.log('Unable to get permission to notify.', err);
       })
   </script>
+
 </body>
 
 </html>
+<script src="script.js">
+
+</script>
